:bento: Change to volo version

--- a/data/01_kriminalitaet.yml
+++ b/data/01_kriminalitaet.yml
@@ -1,22 +1,21 @@
-heading: Kriminalität in NRW 2005-2016
-subheading: Wie hat sich die Zahl aller bei der Polizei bekannt gewordenen Fälle entwickelt?
+heading: Ganz neues Thema für NRW
+subheading: Volos erfinden 'Was schätzen Sie?' neu
 result: >
-        **Die Gesamtzahl der Kriminalfälle hat sich seit 2005 kaum verändert.** Die Zahl der Fälle liegt seit 2005 bei rund 1,5 Millionen pro Jahr.
-        In der polizeilichen Kriminalstatistik werden alle bei der Polizei gemeldeten Straftaten erfasst, einschließlich versuchter Straftaten.
+        **Hier wichtiges** Hier noch ein paar launige Sätze
 
-        [Kriminalstatistik: So groß sind die Unterschiede in Deutschland | **mehr**](http://www1.wdr.de/nachrichten/landespolitik/landtagswahl/wss-kriminalitaet-100.html)
+        [Falls man mal einen Link haben will: Super link hierher | **mehr**](http://worthandlung.de)
 
 data:
-  2005: 1.503451
-  2006: 1.491897
-  2007: 1.495333
-  2008: 1.453203
-  2009: 1.458438
+  2005: 15.503451
+  2006: 5.491897
+  2007: 7.495333
+  2008: 3.453203
+  2009: 2.458438
   2010: 1.442801
-  2011: 1.511469
-  2012: 1.518363
+  2011: 4.511469
+  2012: 5.518363
   2013: 1.484943
-  2014: 1.501125
+  2014: 2.501125
   2015: 1.517448
   2016: 1.469426
 accessibility: http://www1.wdr.de/nachrichten/landespolitik/landtagswahl/wss-kriminalitaet-barrierefrei-104.html
