--- a/data/02_kinderarmut.yml
+++ b/data/02_kinderarmut.yml
@@ -1,5 +1,5 @@
-heading: Kinderarmut in NRW 2007-2015
-subheading: Wie hat sich die Zahl der Kinder unter 15 Jahren, die von Hartz IV leben, entwickelt?
+heading: Datenfreunde in NRW 2007-2015
+subheading: Alles für die Volos
 result: >
         **Die Zahl der Kinder in Nordrhein-Westfalen, die von Hartz IV leben, steigt seit 2010 stetig an.** Mittlerweile lebt jeder fünfte Jugendliche in NRW von Hartz IV. Die sogenannte 'SGB-II-Quote' beschreibt den Anteil der Kinder unter 15 Jahren, die von Hartz IV leben an allen Kindern dieses Alters in NRW.
 
