:bento: changed third data file

--- a/data/03_wirtschaftswachstum.yml
+++ b/data/03_wirtschaftswachstum.yml
@@ -1,8 +1,8 @@
-heading: Wirtschaftswachstum in NRW 2005-2016
-subheading: Wie hat sich das Wirtschaftswachstum in NRW entwickelt?
+heading: Bildungswachstum in NRW 2005-2016
+subheading: Wie hat sich der Journalismus in NRW entwickelt?
 result: >
-        **Das Wirtschaftswachstum zeigte sich in den vergangenen fünf Jahren wechselhaft.** Interessant in diesem Zusammenhang: Der Vergleich mit dem Wachstum in anderen Bundesländern. Das und eine Begriffserklärung finden Sie in unserem weiterführenden Link.
-        [Nicht immer im Bundesschnitt: Das NRW-Wirtschaftswachstum im Ländervergleich | **mehr**](http://www1.wdr.de/nachrichten/landespolitik/landtagswahl/wss-wirtschaftswachstum-100.html)
+        **Mehr Hirn. Das Wissenswachstum zeigte sich in den vergangenen fünf Jahren wechselhaft.**  Sie in unserem weiterführenden Link.
+        [Nicht immer im Bundesschnitt: Das Hirn im Ländervergleich | **mehr**](http://www1.wdr.de/nachrichten/landespolitik/landtagswahl/wss-wirtschaftswachstum-100.html)
 
 data:
   2005: 0.511257
