:bento: no link in data

--- a/data/03_wirtschaftswachstum.yml
+++ b/data/03_wirtschaftswachstum.yml
@@ -1,8 +1,7 @@
 heading: Bildungswachstum in NRW 2005-2016
 subheading: Wie hat sich der Journalismus in NRW entwickelt?
 result: >
-        **Mehr Hirn. Das Wissenswachstum zeigte sich in den vergangenen fünf Jahren wechselhaft.**  Sie in unserem weiterführenden Link.
-        [Nicht immer im Bundesschnitt: Das Hirn im Ländervergleich | **mehr**](http://www1.wdr.de/nachrichten/landespolitik/landtagswahl/wss-wirtschaftswachstum-100.html)
+        **Mehr Hirn. Das Wissenswachstum zeigte sich in den vergangenen fünf Jahren wechselhaft.**  Hier ohne Link.
 
 data:
   2005: 0.511257
