--- a/data/01_ehescheidungen.yml
+++ b/data/01_ehescheidungen.yml
@@ -1,4 +1,4 @@
-heading: Ganz neues Thema für NRW
+heading: Ehescheidungen
 subheading: Volos erfinden 'Was schätzen Sie?' neu
 result: >
         **Hier wichtiges** Hier noch ein paar launige Sätze
@@ -6,18 +6,18 @@ result: >
         [Falls man mal einen Link haben will: Super link hierher | **mehr**](http://worthandlung.de)
 
 data:
-  2005: 15.503451
-  2006: 5.491897
-  2007: 7.495333
-  2008: 3.453203
-  2009: 2.458438
-  2010: 1.442801
-  2011: 4.511469
-  2012: 5.518363
-  2013: 1.484943
-  2014: 2.501125
-  2015: 1.517448
-  2016: 1.469426
+  2005: 116
+  2006: 113
+  2007: 108
+  2008: 116
+  2009: 117
+  2010: 117
+  2011: 115
+  2012: 113
+  2013: 107
+  2014: 100
+  2015: 98
+
 accessibility: http://www1.wdr.de/nachrichten/landespolitik/landtagswahl/wss-kriminalitaet-barrierefrei-104.html
 unit: Mio.
 precision: 2
