:bento: add headings for marriages

--- a/data/01_kriminalitaet.yml
+++ b/data/01_kriminalitaet.yml
@@ -1,7 +1,9 @@
-heading: Ehescheidungen in NRW
-subheading: Was denken Sie: Wohin geht der Trend?
+heading: Ehescheidungen
+subheading: Volos erfinden 'Was schätzen Sie?' neu
 result: >
-        **Die Zahl der Scheidungen in NRW ist seit 2009 jedes Jahr gesunken.** Der „liebevolle Gegentrend“: Seit 2013 steigt die Zahl der Eheschließungen wieder.
+        **Hier wichtiges** Hier noch ein paar launige Sätze
+
+        [Falls man mal einen Link haben will: Super link hierher | **mehr**](http://worthandlung.de)
 
 data:
   2005: 116
