:bento: more data

--- a/data/02_landwirtschaft.yml
+++ b/data/02_landwirtschaft.yml
@@ -1,7 +1,7 @@
 heading: Ökologische Landwirtschaft in NRW 2005-2016
 subheading: Wie hat sich der Anteil der ökologisch bewirtschafteten Fläche unter Kraft verändert?
 result: >
-        **Tatsächlich hat sich unter der rot-grünen Landesregierung der Anteil der Bio-Landwirtschaft erhöht.** Das war erklärtes Ziel der rot-grünen Landesregierung.
+        **Tatsächlich hat sich unter der rot-grünen Landesregierung der Anteil der Bio-Landwirtschaft nur leicht erhöht.** Erst im Jahr 2016 gab es einen Anstieg. Dabei war die Förderung der Bio-Landwirtschaft erklärtes Ziel der rot-grünen Landesregierung.
 
 data:
   2005: 3.7
