--- a/data/03_insolvenzen.yml
+++ b/data/03_insolvenzen.yml
@@ -1,5 +1,5 @@
 heading: Unternehmensinsolvenzen in NRW
-subheading: Wie viele Unternehmen gingen prozentual unter der Regierung Kraft insolvent?
+subheading: Wie viele von 1000 Unternehmen gingen unter der Regierung Kraft insolvent?
 result: >
         **In NRW gehen jedes Jahr zwischen 0,8 und 1,2 Prozent der Unternehmen insolvent.**
         Ein Trend ist nicht zu erkennen – die Auf- und Abbewegungen lassen nicht auf eine extrem unternehmensfeindliche Stimmung unter der Regierung Kraft schließen.
@@ -17,5 +17,5 @@ data:
   2015: 8
 
 accessibility: http://www1.wdr.de/nachrichten/landespolitik/landtagswahl/wss-wirtschaftswachstum-barrierefrei-104.html
-unit: 'pro 1000 Unternehmen'
+unit: 'Unternehmen'
 precision: 0
